# KanoopDatabaseQt

./: CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  libKanoopDatabaseQt.pc.in
.github/workflows/: ci.yaml
docs/: mainpage.md
include/Kanoop/database/: databasecredentials.h  datasource.h  queryloadable.h  sqlparser.h
src/database/: databasecredentials.cpp  datasource.cpp  queryloadable.cpp  sqlparser.cpp
tests/: CMakeLists.txt  tst_databasecredentials.cpp  tst_datasource.cpp  tst_sqlparser.cpp
